# EventStoreDB-Client-Python

./: .copier-answers.yml  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .taplo.toml  README.md  pyproject.toml  shell.nix
.github/workflows/: build-docs.yaml  build-package.yaml  build.yaml  ci-main.yaml  ci-pr.yaml  ci.yaml  lint.yaml  prepare-release.yaml  publish-docs.yaml  publish-github.yaml  publish-pypi.yaml  release.yaml  test.yaml  test.yml
docs/: conf.py  index.md  installation.md  license.md
eventstoredb/: __init__.py  events.py  exceptions.py  filters.py  options.py  subscriptions.py  types.py
eventstoredb/client/: __init__.py  client.py  exceptions.py  options.py  protocol.py  types.py
eventstoredb/client/append_to_stream/: exceptions.py  grpc.py  mixin.py  types.py
eventstoredb/client/create_persistent_subscription_to_all/: grpc.py  mixin.py  types.py
eventstoredb/client/create_persistent_subscription_to_stream/: exceptions.py  grpc.py  mixin.py  types.py
eventstoredb/client/delete_persistent_subscription_to_all/: grpc.py  mixin.py  types.py
eventstoredb/client/delete_persistent_subscription_to_stream/: grpc.py  mixin.py  types.py
eventstoredb/client/get_persistent_subscription_details/: grpc.py  mixin.py  types.py
eventstoredb/client/read_all/: grpc.py  mixin.py  types.py
eventstoredb/client/read_stream/: grpc.py  mixin.py  types.py
eventstoredb/client/subscribe_to_all/: grpc.py  mixin.py  types.py
eventstoredb/client/subscribe_to_persistent_subscription_to_all/: grpc.py  mixin.py  types.py
eventstoredb/client/subscribe_to_persistent_subscription_to_stream/: grpc.py  mixin.py  types.py
eventstoredb/client/subscribe_to_stream/: grpc.py  mixin.py  types.py
eventstoredb/client/update_persistent_subscription_to_all/: grpc.py  mixin.py  types.py
eventstoredb/client/update_persistent_subscription_to_stream/: grpc.py  mixin.py  types.py
eventstoredb/persistent_subscriptions/common/: __init__.py  exceptions.py  grpc.py  types.py
eventstoredb/persistent_subscriptions/create/: __init__.py  grpc.py  types.py
eventstoredb/persistent_subscriptions/delete/: __init__.py  grpc.py  types.py
eventstoredb/persistent_subscriptions/subscribe/: __init__.py  grpc.py  subscription.py  types.py
eventstoredb/persistent_subscriptions/update/: __init__.py  grpc.py  types.py
eventstoredb/streams/: types.py
eventstoredb/streams/append/: __init__.py  exceptions.py  grpc.py  types.py
eventstoredb/streams/read/: __init__.py  exceptions.py  grpc.py  types.py
eventstoredb/streams/subscribe/: __init__.py  grpc.py  subscription.py  types.py
examples/: append_to_stream.py  create_persistent_subscription.py  delete_persistent_subscription.py  persistent_subscription.py  read_stream.py  subscribe_persistent_subscription.py  subscribe_to_stream.py  update_persistent_subscription.py
tests/: conftest.py  docker-compose.yml  test_append_to_stream.py  test_client_options.py  test_create_persistent_subscription_to_all.py  test_create_persistent_subscription_to_stream.py  test_delete_persistent_subscription_to_all.py  test_delete_persistent_subscription_to_stream.py  test_get_persistent_subscription_details.py  test_import.py  test_read_all.py  test_read_stream.py  test_subscribe_to_all.py  test_subscribe_to_persistent_subscription_to_all.py  test_subscribe_to_persistent_subscription_to_stream.py  test_subscribe_to_stream.py  test_update_persistent_subscription_to_all.py  test_update_persistent_subscription_to_stream.py  utils.py
tests/client/: test_client_options.py
tests/persistent_subscriptions/: test_create.py  test_delete.py  test_subscribe.py  test_update.py
tests/streams/: test_append.py  test_read.py  test_read_all.py  test_subscribe.py  test_subscribe_all.py
