[tool.poetry]
name = "eventstoredb"
version = "0.1.0"
description = ""
authors = ["betaboon <betaboon@0x80.ninja>"]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = "2.0.0-beta4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-docker = "^0.10.3"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"
betterproto = {version = "2.0.0b4", extras = ["compiler"]}
grpcio-tools = "^1.43.0"
taskipy = "^1.9.0"

[tool.pytest.ini_options]
log_cli = true

[tool.taskipy.tasks.test]
help = "run tests"
cmd = "pytest"

[tool.taskipy.variables]
protoc_in_path = "./external/EventStore/src/Protos/Grpc"
protoc_out_path = "./eventstoredb/generated"

[tool.taskipy.tasks.protobuf-generate]
use_vars = true
help = "generate grpc-code from protobuf-definitions"
cmd = """
  mkdir -p {protoc_out_path} &&
  python -m grpc_tools.protoc \
    --proto_path={protoc_in_path} \
    --python_betterproto_out={protoc_out_path} \
    {protoc_in_path}/*.proto
"""

[tool.taskipy.tasks.protobuf-update]
use_vars = true
help = "update EventStore-submodule to version provided in env VERSION"
cmd = """
[ -z "$VERSION" ] && echo "environment-variable VERSION not provided" || \
(
  cd {protoc_in_path} && \
  git fetch --depth 1 origin $VERSION && \
  git checkout FETCH_HEAD
)
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
